# memorax-template

./: .gitignore  README.md  main.py  pyproject.toml  rename_template.py
config/: config.yaml
config/algorithm/: ac_lambda.yaml  dqn.yaml  gradient_ppo.yaml  mappo.yaml  ppo.yaml  pqn.yaml  r2d2.yaml  sac.yaml
config/head/: categorical.yaml  discrete_q_network.yaml  gaussian.yaml  squashed_gaussian.yaml  twin_continuous_q_network.yaml  v_network.yaml
config/logger/: dashboard.yaml  default.yaml  wandb.yaml
config/plot/: minatar.yaml
config/stack/: default.yaml  llama.yaml
config/torso/: default.yaml  delta_net.yaml  ffm.yaml  gated_delta_net.yaml  gated_delta_net_diag.yaml  gated_delta_net_f.yaml  gated_linear_attention.yaml  gru.yaml  linear_attention.yaml  lru.yaml  mamba.yaml  min_gru.yaml  mlp.yaml  mlstm.yaml  moebius_salt.yaml  rtrl.yaml  rtu.yaml  s5.yaml  salt.yaml  salt_diag.yaml  salt_f.yaml  salt_lr.yaml  self_attention.yaml  shm.yaml  slstm.yaml
hydra_plugins/hydra_evosax_sweeper/: _impl.py  config.py  evosax_sweeper.py
scripts/: ac_lambda_brax.sh  ac_lambda_popjym.sh  analyze_dead_reckoning.py  dqn_minatar.sh  dqn_popjym.sh  evaluate.py  plot_dead_reckoning.py  plot_minatar.py  plot_update_heatmaps.py  ppo_brax.sh  ppo_gymnax.sh  ppo_mujoco_playground.sh  pqn_count_recall_hard.sh  pqn_craftax.sh  pqn_dead_reckoning.sh  pqn_minatar.sh  pqn_mirage.sh  pqn_navigator.sh  pqn_navix_maze.sh  pqn_odometer.sh  pqn_piloting.sh  pqn_poatar.sh  pqn_popgym_arcade.sh  pqn_popjym.sh  pqn_xminigrid.sh  render_poatar.py  sac_brax.sh  sac_mujoco_playground.sh
scripts/ias/: ppo_brax.sh  pqn_popgym_arcade.sh
scripts/local/: ppo_brax.sh
src/: __init__.py  environment.py
src/algorithms/: ac_lambda.py  ac_lambda_brax.py  ac_lambda_popjym.py  algorithm.py  dqn.py  dqn_minatar.py  dqn_popgym_arcade.py  dqn_popjym.py  gradient_ppo.py  gradient_ppo_brax.py  mappo.py  mappo_jaxmarl.py  ppo.py  ppo_brax.py  ppo_minatar.py  ppo_pobax.py  pqn.py  pqn_craftax.py  pqn_grimax.py  pqn_gymnax.py  pqn_minatar.py  pqn_popgym_arcade.py  pqn_popjym.py  r2d2.py  r2d2_minatar.py  sac.py  sac_mujoco_playground.py
(+193 files in other folders)
