[project]
name = "memorax-template"
version = "0.1.0"
description = "Template project for memorax experiments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "memorax[popjym,popgym_arcade,craftax,brax,atari,pobax,grimax,navix,xminigrid,playground]",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher",
    "omegaconf>=2.3.0",
    "flashbax",
]

[project.optional-dependencies]
cuda = [
    "memorax[cuda,popjym,popgym_arcade,craftax,brax,atari,pobax,grimax,navix,xminigrid,playground]",
]

[tool.uv.sources]
memorax = { git = "https://github.com/memory-rl/memorax.git" }


[tool.setuptools.packages.find]
include = ["src*"]
